--- a/d2s8-kommunikation/d2s8-kommunikation.Rmd
+++ b/d2s8-kommunikation/d2s8-kommunikation.Rmd
@@ -1028,6 +1028,79 @@ class: smalltext
 
 
 ---
+# Daten-Tatort II: Sind bestimmte Musikgenres tödlicher als andere?
+
+.pull-left[
+<div align="center">
+<img src="../pics/musician_mortality.jpeg" height=430>
+</div>
+
+`Quelle` [The Conversation](https://theconversation.com/music-to-die-for-how-genre-affects-popular-musicians-life-expectancy-36660), `Hintergrund (mit Autoren-Replik)` [Calling Bullshit](https://callingbullshit.org/case_studies/case_study_musician_mortality.html)
+]
+
+.pull-right[
+> [Study author Dianna Kenny] found that musicians from older genres – including blues, jazz, country and gospel – have similar lifespans to American people their own age. The life expectancy for R&B musicians is slightly lower, while the life expectancy for newer genres like rock, techno, punk, metal, rap and hip hop is significantly shorter."
+
+<div align="right">Ana Swanson, <a href="https://www.washingtonpost.com/news/wonk/wp/2015/04/15/the-causes-of-musicians-deaths-by-genre/">Washington Post</a></div>
+
+> "It's a cautionary tale to some degree," Kenny told the Washington Post. "People who go into rap music or hip hop or punk, they're in a much more occupational hazard profession compared to war. We don't lose half our army in a battle."
+
+<div align="right">Dianna Kenny, <a href="https://www.washingtonpost.com/news/morning-mix/wp/2015/03/25/over-half-of-dead-hip-hop-artists-were-murdered-study-finds/">quoted by Washington Post</a></div>
+]
+
+
+---
+# Weitere Evidenz
+
+.pull-left[
+<div align="center">
+<img src="../pics/musician_mortality2.jpeg" height=450>
+</div>
+]
+
+--
+
+.pull-right[
+## Some issues
+
+1. **Sanity check:** Sind manche Genres wirklich so tödlich? Sterben z. B. Rap-Musiker wirklich mit einem Durchschnittsalter von ~30 Jahren?
+2. **Datenzensierung:** Einige Genres sind jünger als andere, und die Auswertung setzt voraus, dass die Musiker bereits gestorben sind. Die meisten Rap- und Hip-Hop-Stars sind heute noch am Leben - Lebensdauer unbekannt!
+3. **Bedingte Wahrscheinlichkeiten:** Die Wahrscheinlichkeiten der einzelnen Todesursachen hängen davon ab, dass der Tod zum Zeitpunkt der Untersuchung bereits eingetreten ist.
+4) (Kleineres Problem) Liniendiagramm für kategoriale Daten?  [Keine gute Idee.](https://www.jmp.com/en_gb/statistics-knowledge-portal/exploratory-data-analysis/line-graph.html#:~:text=Line%20graphs%20do%20not%20make,might%20have%20a%20defined%20order.)
+]
+
+
+---
+# Lösung des Falles
+
+.pull-left[
+
+|                       	| Evidenz und Schlüsse                           	|
+|-----------------------	|----------------------------------------------------	|
+| **Der Tatort**   	| Musikgenre korreliert mit Todesalter                 	|
+| **Die Verdächtigen**    	| Lifestyle (z.B. Drogenkonsum), Alter des Genres, unvollständige Datenerhebung |
+| **Die Tatwaffe** 	| Konfundierung durch Daten-Zensur                              	|
+
+> "In other words, it's not that rap stars will likely die young; it's that the rap stars who have died certainly died young because rap hasn't been around long enough for it to be otherwise." <div align="right">Carl Bergstrom and Jevin West, <a href="https://callingbullshit.org/case_studies/case_study_musician_mortality.html">Calling Bullshit</a><sup>1</sup></div>
+
+<div class="font50"><br><br><sup>1</sup>Die Autorin Dianna Kenny hat mit einer plausiblen Antwort reagiert und auf eine <a href="http://dx.doi.org/10.21091/mppa.2016.1007">besser designte Studie verwiesen</a>, deren Evidenz konsistent mit den ursprünglichen Mustern zu sein scheint.</div>
+]
+
+.pull-right-center[
+<div align="center">
+<br>
+<b>Inspector Lestrade:</b><br>
+<img src="../pics/tikz/tikz-024.png" width=400>
+<br>
+<b>Sherlock:</b><br>
+<img src="../pics/tikz/tikz-025.png" width=400>
+</div>
+]
+
+
+
+
+---
 # Diskussion in Gruppen
 
 .pull-left[
@@ -1331,6 +1404,8 @@ name: dashboards
 - [ggvis](https://ggvis.rstudio.com/): Ähnlich wie ggplot2, aber mit Fokus auf Web und Interaktion
 - [shinydashboard](): Werkzeuge zur Erstellung visueller Dashboards
 ]
+
+
 
 
 
